fix alignment

--- a/main.css
+++ b/main.css
@@ -50,8 +50,12 @@ overflow-x:hidden;
     margin-top:3em;
 }
 
-.centerV {
-    vertical-align:middle;
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
 }
 
 div.centerH {
